trasteos para probar mis arrelgos y algnas lineas de log

--- a/container-builder/builder/kubernetes/testdata/Dockerfile
+++ b/container-builder/builder/kubernetes/testdata/Dockerfile
@@ -20,6 +20,9 @@ USER 1001
 # User home from base image
 WORKDIR /home/kogito/kogito-sw-base
 
+
+ARG MY_PROPERTY
+
 # Copy from build context to skeleton project
 COPY * ./src/main/resources
 
