restore .ci and .github folders to before apache migration changes

--- a/.github/workflows/check-container-builder.yml
+++ b/.github/workflows/check-container-builder.yml
@@ -23,8 +23,7 @@ jobs:
     steps:
       - name: Install package
         run: |
-          sudo apt-get update &&\
-          sudo apt-get -y install --no-install-recommends \
+          sudo apt-get -y install \
           btrfs-progs \
           libgpgme-dev \
           libbtrfs-dev \
