[KOGITO-9940] Add Job Service to SonataFlowPlatform CRD (#311)
* [KOGITO-9940] Added job service field in platform CRD

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Add reconciliation logic for Job Service

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Added ServiceType enum type and changed the image tag based on operator version

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Make generate-all

* Add application.properties entry for jobService URL Property

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Renaming serviceSpec field 'job' to 'jobService'

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Add missing job service properties

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Add reactive property when postgreSQL is configured as persistence for jobs-service

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Refactor to use interface

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Refactoring services to extract from profiles/common

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Moved platform services and reconciliation constants to common/constants and avoid duplications between packages

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Updated golang doc function description for GenerateJobServiceApplicationProperties and GenerateDataIndexApplicationProperties

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Updated ginkgo to v2.13.0 and gomega to v1.30.0

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Added unit tests for data index and job service application properties

* Changes based on feedback from Walter

Signed-off-by: Jordi Gil <jgil@redhat.com>

* Revert "Changes based on feedback from Walter"

This reverts commit 2b3638aa6d024a6b5f79e674970be402b5a151a7.

* Check for not dev profile instead of production one for condition to generate the application service properties.
Reactive URL for job service won't include a default schema if it's not provided in the JDBC URL for PostgreSQL
Hardcoded Job Servi

--- a/config/manifests/bases/sonataflow-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/sonataflow-operator.clusterserviceversion.yaml
@@ -107,6 +107,10 @@ spec:
           service instance.
         displayName: podTemplate
         path: services.dataIndex.podTemplate
+      - description: PodTemplate describes the deployment details of this platform
+          service instance.
+        displayName: podTemplate
+        path: services.jobService.podTemplate
       statusDescriptors:
       - description: Cluster what kind of cluster you're running (ie, plain Kubernetes
           or OpenShift)
