kie-kogito-serverless-operator-335: Operator driven service discovery API Phase4 (#338)
* kie-kogito-serverless-operator-335: Operator driven service discovery API Phase4
    - Add the discovery of Openshift DeploymentConfigs and Routes to the service discovery API

* kie-kogito-serverless-operator-335: Operator driven service discovery API Phase4
    - Code review suggestions 1

* kie-kogito-serverless-operator-335: Operator driven service discovery API Phase4
    - Code review suggestions 2

* kie-kogito-serverless-operator-335: Operator driven service discovery API Phase4
    - Augment the service uri query parameters

--- a/operator.yaml
+++ b/operator.yaml
@@ -26334,6 +26334,22 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - apps.openshift.io
+  resources:
+  - deploymentconfigs
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - route.openshift.io
+  resources:
+  - routes
+  verbs:
+  - get
+  - list
+  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
