--- a/operator.yaml
+++ b/operator.yaml
@@ -912,6 +912,60 @@ spec:
                       of the operator's default.
                     type: string
                 type: object
+              eventing:
+                description: Eventing describes the information required for Knative
+                  Eventing integration in the platform.
+                properties:
+                  broker:
+                    description: Broker to communicate with workflow deployment.  It
+                      can be the default broker when the workflow, Dataindex, or Jobservice
+                      does not have a sink or source specified.
+                    properties:
+                      CACerts:
+                        description: CACerts are Certification Authority (CA) certificates
+                          in PEM format according to https://www.rfc-editor.org/rfc/rfc7468.
+                          If set, these CAs are appended to the set of CAs provided
+                          by the Addressable target, if any.
+                        type: string
+                      ref:
+                        description: Ref points to an Addressable.
+                        properties:
+                          address:
+                            description: Address points to a specific Address Name.
+                            type: string
+                          apiVersion:
+                            description: API version of the referent.
+                            type: string
+                          group:
+                            description: 'Group of the API, without the version of
+                              the group. This can be used as an alternative to the
+                              APIVersion, and then resolved using ResolveGroup. Note:
+                              This API is EXPERIMENTAL and might break anytime. For
+                              more details: https://github.com/knative/eventing/issues/5086'
+                            type: string
+                          kind:
+                            description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                            type: string
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                            type: string
+                          namespace:
+                            description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                              This is optional field, it gets defaulted to the object
+                              holding it if left out.'
+                            type: string
+                        required:
+                        - kind
+                        - name
+                        type: object
+                      uri:
+                        description: URI can be an absolute URL(non-empty scheme and
+                          non-empty host) pointing to the target or a relative URI.
+                          Relative URIs will be resolved using the base URI retrieved
+                          from Ref.
+                        type: string
+                    type: object
+                type: object
               persistence:
                 description: Persistence defines the platform persistence configuration.
                   When this field is set, the configuration is used as the persistence
@@ -8919,6 +8973,56 @@ spec:
                               type: object
                             type: array
                         type: object
+                      source:
+                        description: Defines the source where the Dataindex receives
+                          events from
+                        properties:
+                          CACerts:
+                            description: CACerts are Certification Authority (CA)
+                              certificates in PEM format according to https://www.rfc-editor.org/rfc/rfc7468.
+                              If set, these CAs are appended to the set of CAs provided
+                              by the Addressable target, if any.
+                            type: string
+                          ref:
+                            description: Ref points to an Addressable.
+                            properties:
+                              address:
+                                description: Address points to a specific Address
+                                  Name.
+                                type: string
+                              apiVersion:
+                                description: API version of the referent.
+                                type: string
+                              group:
+                                description: 'Group of the API, without the version
+                                  of the group. This can be used as an alternative
+                                  to the APIVersion, and then resolved using ResolveGroup.
+                                  Note: This API is EXPERIMENTAL and might break anytime.
+                                  For more details: https://github.com/knative/eventing/issues/5086'
+                                type: string
+                              kind:
+                                description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                                type: string
+                              name:
+                                description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                type: string
+                              namespace:
+                                description: 'Namespace of the referent. More info:
+                                  https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                                  This is optional field, it gets defaulted to the
+                                  object holding it if left out.'
+                                type: string
+                            required:
+                            - kind
+                            - name
+                            type: object
+                          uri:
+                            description: URI can be an absolute URL(non-empty scheme
+                              and non-empty host) pointing to the target or a relative
+                              URI. Relative URIs will be resolved using the base URI
+                              retrieved from Ref.
+                            type: string
+                        type: object
                     type: object
                   jobService:
                     description: 'Deploys the Job service for use by workflows without
@@ -16790,6 +16894,106 @@ spec:
                               - name
                               type: object
                             type: array
+                        type: object
+                      sink:
+                        description: Defines the sink where the Jobservice sends events
+                          to
+                        properties:
+                          CACerts:
+                            description: CACerts are Certification Authority (CA)
+                              certificates in PEM format according to https://www.rfc-editor.org/rfc/rfc7468.
+                              If set, these CAs are appended to the set of CAs provided
+                              by the Addressable target, if any.
+                            type: string
+                          ref:
+                            description: Ref points to an Addressable.
+                            properties:
+                              address:
+                                description: Address points to a specific Address
+                                  Name.
+                                type: string
+                              apiVersion:
+                                description: API version of the referent.
+                                type: string
+                              group:
+                                description: 'Group of the API, without the version
+                                  of the group. This can be used as an alternative
+                                  to the APIVersion, and then resolved using ResolveGroup.
+                                  Note: This API is EXPERIMENTAL and might break anytime.
+                                  For more details: https://github.com/knative/eventing/issues/5086'
+                                type: string
+                              kind:
+                                description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                                type: string
+                              name:
+                                description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                type: string
+                              namespace:
+                                description: 'Namespace of the referent. More info:
+                                  https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                                  This is optional field, it gets defaulted to the
+                                  object holding it if left out.'
+                                type: string
+                            required:
+                            - kind
+                            - name
+                            type: object
+                          uri:
+                            description: URI can be an absolute URL(non-empty scheme
+                              and non-empty host) pointing to the target or a relative
+                              URI. Relative URIs will be resolved using the base URI
+                              retrieved from Ref.
+                            type: string
+                        type: object
+                      source:
+                        description: Defines the source where the Jobservice receives
+                          events from
+                        properties:
+                          CACerts:
+                            description: CACerts are Certification Authority (CA)
+                              certificates in PEM format according to https://www.rfc-editor.org/rfc/rfc7468.
+                              If set, these CAs are appended to the set of CAs provided
+                              by the Addressable target, if any.
+                            type: string
+                          ref:
+                            description: Ref points to an Addressable.
+                            properties:
+                              address:
+                                description: Address points to a specific Address
+                                  Name.
+                                type: string
+                              apiVersion:
+                                description: API version of the referent.
+                                type: string
+                              group:
+                                description: 'Group of the API, without the version
+                                  of the group. This can be used as an alternative
+                                  to the APIVersion, and then resolved using ResolveGroup.
+                                  Note: This API is EXPERIMENTAL and might break anytime.
+                                  For more details: https://github.com/knative/eventing/issues/5086'
+                                type: string
+                              kind:
+                                description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                                type: string
+                              name:
+                                description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                type: string
+                              namespace:
+                                description: 'Namespace of the referent. More info:
+                                  https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                                  This is optional field, it gets defaulted to the
+                                  object holding it if left out.'
+                                type: string
+                            required:
+                            - kind
+                            - name
+                            type: object
+                          uri:
+                            description: URI can be an absolute URL(non-empty scheme
+                              and non-empty host) pointing to the target or a relative
+                              URI. Relative URIs will be resolved using the base URI
+                              retrieved from Ref.
+                            type: string
                         type: object
                     type: object
                 type: object
@@ -26299,6 +26503,63 @@ spec:
                       will be resolved using the base URI retrieved from Ref.
                     type: string
                 type: object
+              sources:
+                description: Sources describes the list of sources used to create
+                  triggers for events consumed by this SonataFlow instance.
+                items:
+                  description: SonataFlowSourceSpec defines the desired state of a
+                    source used for trigger creation
+                  properties:
+                    CACerts:
+                      description: CACerts are Certification Authority (CA) certificates
+                        in PEM format according to https://www.rfc-editor.org/rfc/rfc7468.
+                        If set, these CAs are appended to the set of CAs provided
+                        by the Addressable target, if any.
+                      type: string
+                    eventType:
+                      description: Defines the eventType to filter the events
+                      type: string
+                    ref:
+                      description: Ref points to an Addressable.
+                      properties:
+                        address:
+                          description: Address points to a specific Address Name.
+                          type: string
+                        apiVersion:
+                          description: API version of the referent.
+                          type: string
+                        group:
+                          description: 'Group of the API, without the version of the
+                            group. This can be used as an alternative to the APIVersion,
+                            and then resolved using ResolveGroup. Note: This API is
+                            EXPERIMENTAL and might break anytime. For more details:
+                            https://github.com/knative/eventing/issues/5086'
+                          type: string
+                        kind:
+                          description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                          type: string
+                        name:
+                          description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                          type: string
+                        namespace:
+                          description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                            This is optional field, it gets defaulted to the object
+                            holding it if left out.'
+                          type: string
+                      required:
+                      - kind
+                      - name
+                      type: object
+                    uri:
+                      description: URI can be an absolute URL(non-empty scheme and
+                        non-empty host) pointing to the target or a relative URI.
+                        Relative URIs will be resolved using the base URI retrieved
+                        from Ref.
+                      type: string
+                  required:
+                  - eventType
+                  type: object
+                type: array
             required:
             - flow
             type: object
