Fix #366 - Add custom label to manifests to avoid clashing with installed operators in a cluster (#373)
Signed-off-by: Ricardo Zanini <zanini@redhat.com>

--- a/bundle.osl/manifests/logic-operator-rhel8-controller-manager-metrics-service_v1_service.yaml
+++ b/bundle.osl/manifests/logic-operator-rhel8-controller-manager-metrics-service_v1_service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    control-plane: controller-manager
+    control-plane: sonataflow-operator
   name: logic-operator-rhel8-controller-manager-metrics-service
 spec:
   ports:
@@ -12,6 +12,6 @@ spec:
     protocol: TCP
     targetPort: https
   selector:
-    control-plane: controller-manager
+    control-plane: sonataflow-operator
 status:
   loadBalancer: {}
