--- a/bundle.osl/manifests/logic-operator-rhel8.clusterserviceversion.yaml
+++ b/bundle.osl/manifests/logic-operator-rhel8.clusterserviceversion.yaml
@@ -510,20 +510,20 @@ spec:
           serviceAccountName: logic-operator-rhel8-controller-manager
       deployments:
         - label:
-            control-plane: controller-manager
+            control-plane: sonataflow-operator
           name: logic-operator-rhel8-controller-manager
           spec:
             replicas: 1
             selector:
               matchLabels:
-                control-plane: controller-manager
+                control-plane: sonataflow-operator
             strategy: {}
             template:
               metadata:
                 annotations:
                   kubectl.kubernetes.io/default-container: manager
                 labels:
-                  control-plane: controller-manager
+                  control-plane: sonataflow-operator
               spec:
                 containers:
                   - args:
