--- a/bundle/manifests/sonataflow-operator-controller-manager-metrics-service_v1_service.yaml
+++ b/bundle/manifests/sonataflow-operator-controller-manager-metrics-service_v1_service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    control-plane: controller-manager
+    control-plane: sonataflow-operator
   name: sonataflow-operator-controller-manager-metrics-service
 spec:
   ports:
@@ -12,6 +12,6 @@ spec:
     protocol: TCP
     targetPort: https
   selector:
-    control-plane: controller-manager
+    control-plane: sonataflow-operator
 status:
   loadBalancer: {}
