--- a/bundle/manifests/sonataflow-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/sonataflow-operator.clusterserviceversion.yaml
@@ -651,20 +651,20 @@ spec:
         serviceAccountName: sonataflow-operator-controller-manager
       deployments:
       - label:
-          control-plane: controller-manager
+          control-plane: sonataflow-operator
         name: sonataflow-operator-controller-manager
         spec:
           replicas: 1
           selector:
             matchLabels:
-              control-plane: controller-manager
+              control-plane: sonataflow-operator
           strategy: {}
           template:
             metadata:
               annotations:
                 kubectl.kubernetes.io/default-container: manager
               labels:
-                control-plane: controller-manager
+                control-plane: sonataflow-operator
             spec:
               containers:
               - args:
