--- a/config/manager/osl/manager.yaml
+++ b/config/manager/osl/manager.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    control-plane: controller-manager
+    control-plane: sonataflow-operator
   name: system
 ---
 apiVersion: apps/v1
@@ -11,18 +11,18 @@ metadata:
   name: controller-manager
   namespace: system
   labels:
-    control-plane: controller-manager
+    control-plane: sonataflow-operator
 spec:
   selector:
     matchLabels:
-      control-plane: controller-manager
+      control-plane: sonataflow-operator
   replicas: 1
   template:
     metadata:
       annotations:
         kubectl.kubernetes.io/default-container: manager
       labels:
-        control-plane: controller-manager
+        control-plane: sonataflow-operator
     spec:
       securityContext:
         runAsNonRoot: true
