--- a/.github/workflows/check-container-builder.yml
+++ b/.github/workflows/check-container-builder.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup golang
         uses: actions/setup-go@v2
         with:
-          go-version: 1.21
+          go-version: '1.20'
       - name: Checkout code
         uses: actions/checkout@v2
         with:
@@ -65,7 +65,7 @@ jobs:
       - name: Setup golang
         uses: actions/setup-go@v2
         with:
-          go-version: 1.21
+          go-version: '1.20'
       - name: Checkout code
         uses: actions/checkout@v2
         with:
