--- a/config/manifests/osl/bases/logic-operator-rhel8.clusterserviceversion.yaml
+++ b/config/manifests/osl/bases/logic-operator-rhel8.clusterserviceversion.yaml
@@ -65,6 +65,23 @@ spec:
         displayName: InnerBuild
         path: innerBuild
       version: v1alpha08
+    - description: SonataFlowClusterPlatform is the Schema for the sonataflowclusterplatforms
+        API
+      displayName: Sonata Flow Cluster Platform
+      kind: SonataFlowClusterPlatform
+      name: sonataflowclusterplatforms.sonataflow.org
+      specDescriptors:
+      - description: Name of the SonataFlowPlatform
+        displayName: Platform_Name
+        path: platformRef.name
+      - description: Namespace of the SonataFlowPlatform
+        displayName: Platform_NS
+        path: platformRef.namespace
+      statusDescriptors:
+      - description: Version the operator version controlling this ClusterPlatform
+        displayName: version
+        path: version
+      version: v1alpha08
     - description: SonataFlowPlatform is the descriptor for the workflow platform
         infrastructure.
       displayName: Sonata Flow Platform
@@ -104,6 +121,14 @@ spec:
           no build required)
         displayName: DevMode
         path: devMode
+      - description: PodTemplate describes the deployment details of this platform
+          service instance.
+        displayName: podTemplate
+        path: services.dataIndex.podTemplate
+      - description: PodTemplate describes the deployment details of this platform
+          service instance.
+        displayName: podTemplate
+        path: services.jobService.podTemplate
       statusDescriptors:
       - description: Cluster what kind of cluster you're running (ie, plain Kubernetes
           or OpenShift)
