--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -76,6 +76,12 @@ jobs:
         run: |
           make test-e2e
 
+      - name: Retrieve cluster events and list pods
+        if: failure()
+        run: |
+          kubectl get events
+          kubectl get pod -A
+
       - name: Export kind logs
         if: always()
         run: |
