fix package installation in tests

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,7 +26,8 @@ jobs:
       # Packages for testing with Podman
       - name: Install package
         run: |
-          sudo apt-get -y install \
+          sudo apt-get update &&\
+          sudo apt-get -y install --no-install-recommends \
           btrfs-progs \
           libgpgme-dev \
           libbtrfs-dev \
