--- a/config/manager/controllers_cfg.yaml
+++ b/config/manager/controllers_cfg.yaml
@@ -29,12 +29,12 @@ builderConfigMapName: "sonataflow-operator-builder-config"
 # Quarkus extensions required for workflows persistence. These extensions are used by the SonataFlow build system,
 # in cases where the workflow being built has configured postgresql persistence.
 postgreSQLPersistenceExtensions:
-  - groupId: io.quarkus
+  - groupId: com.redhat.quarkus.platform
     artifactId: quarkus-jdbc-postgresql
-    version: 3.2.10.Final
-  - groupId: io.quarkus
+    version: 3.8.4.redhat-00002
+  - groupId: com.redhat.quarkus.platform
     artifactId: quarkus-agroal
-    version: 3.2.10.Final
+    version: 3.8.4.redhat-00002
   - groupId: org.kie
     artifactId: kie-addons-quarkus-persistence-jdbc
     version: 999-SNAPSHOT
