Set product version to: 9.100.0.redhat-00002

--- a/config/manager/controllers_cfg.yaml
+++ b/config/manager/controllers_cfg.yaml
@@ -37,4 +37,4 @@ postgreSQLPersistenceExtensions:
     version: 3.8.4.redhat-00002
   - groupId: org.kie
     artifactId: kie-addons-quarkus-persistence-jdbc
-    version: 999-SNAPSHOT
+    version: 9.100.0.redhat-00002
