--- a/bundle/manifests/sonataflow-operator-controllers-config_v1_configmap.yaml
+++ b/bundle/manifests/sonataflow-operator-controllers-config_v1_configmap.yaml
@@ -40,7 +40,7 @@ data:
         version: 3.8.4.redhat-00002
       - groupId: org.kie
         artifactId: kie-addons-quarkus-persistence-jdbc
-        version: 999-SNAPSHOT
+        version: 9.100.0.redhat-00002
 kind: ConfigMap
 metadata:
   name: sonataflow-operator-controllers-config
