--- a/images/modules/com.redhat.osl.cli.packager/module.yaml
+++ b/images/modules/com.redhat.osl.cli.packager/module.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 name: "com.redhat.osl.cli.packager"
-version: "1.33.0-snapshot"
+version: "1.33.0"
 description: "Download kn-workflow cli binaries from a given repository"
 
 packages:
@@ -30,7 +30,6 @@ envs:
 args:
   - name: KN_ARTIFACT_URL
     description: "Base URL from where to download the artifacts"
-    example: "http://download.eng.bos.redhat.com/staging-cds/etera/openshift-serverless-clients/1/1.11/1.11.2-4/signed"
 artifacts:
   - name: LICENSE
     url: "https://raw.githubusercontent.com/kiegroup/kogito-serverless-operator/main/LICENSE"
