--- a/images/osl-cli.yaml
+++ b/images/osl-cli.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 - name: "packager"
-  version: 1.33.0-snapshot
+  version: "1.33.0"
   from: "registry.access.redhat.com/ubi8/ubi-minimal:latest"
   modules:
     repositories:
@@ -22,7 +22,7 @@
       - name: com.redhat.osl.cli.packager
 
 - name: "openshift-serverless-1/logic-kn-workflow-cli-artifacts-rhel8"
-  version: 1.33.0-snapshot
+  version: "1.33.0"
   description: "Red Hat OpenShift Serverless Logic 1 kn-workflow CLI artifacts"
   from: "registry.access.redhat.com/ubi8/ubi-minimal:latest"
   labels:
@@ -31,7 +31,7 @@
     - name: name
       value: "openshift-serverless-1/kn-workflow-cli-artifacts-rhel8"
     - name: version
-      value: "1.33.0-snapshot"
+      value: "1.33.0"
     - name: summary
       value: "Red Hat OpenShift Serverless Logic 1 kn-workflow CLI artifacts"
     - name: description
@@ -51,21 +51,20 @@
       - name: com.redhat.osl.cli.artifacts
   run:
     user: 65532
-    
-packages:
-  manager: microdnf
-  content_sets_file: content_sets.yaml
 
-osbs:
-  configuration:
-    container:
-      platforms:
-        only:
-        - x86_64
-        - aarch64
-        - ppc64le
-      compose:
-        pulp_repos: true
-  repository:
-    name: containers/openshift-serverless-1-logic-kn-workflow-cli-artifacts
-    branch: openshift-serverless-1.33-rhel-8    
+  packages:
+    manager: microdnf
+    content_sets_file: content_sets.yaml
+
+  osbs:
+    configuration:
+      container:
+        platforms:
+          only:
+          - x86_64
+          - aarch64
+        compose:
+          pulp_repos: true
+    repository:
+      name: containers/openshift-serverless-1-logic-kn-workflow-cli-artifacts
+      branch: openshift-serverless-1.33-rhel-8
